--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
     Learn how to configure a non-root public URL by running `npm run build`.
   -->
   <title>Creative Market</title>
+  <link rel="stylesheet" href="fonts/GothamPro2/stylesheet.css">
+  <link href="https://fonts.googleapis.com/css?family=Helvetica:300,400,700" rel="stylesheet">
 </head>
 <body>
 <noscript>
