--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
   <title>Creative Market</title>
 </head>
 <body>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBthbaEZovvYQGASfFyLwekEGHEMQ-Ure0&libraries=places"></script>
 <noscript>
   You need to enable JavaScript to run this app.
 </noscript>
