social share & seo 1

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <meta name="author" content="creative.market" />
+  <meta name="robots" content="index,follow" />
+
+  <meta name="keywords" content="Creative Market Rent Gear Share Gear" />
+  <meta name="description" content="Rent creative gear from the people around you. Rent and share gear with Creative Market." />
+  <meta property="og:title" content="creative.market: Rent creative gear from the people around you. Rent and share gear with creative market." />
+  <meta property="og:description" content="With Creative Market, you can rent any gear you might need from other creatives around you. Allow others to rent from you at the same time." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://creative.market/images/logo-small.svg" />
+  <meta property="og:locale" content="en-us" />
+  <meta property="og:url" content="https://creative.market" />
+  <meta property="og:site_name" content="creative.market" />
+
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@creativemarket">
+  <meta name="twitter:creator" content="@creativemarket">
+
+  <!--   <meta name="google-site-verification" content="7YOhhtoNEfX9uqsFOW8FI-h6Nq5GsJ5tnSe3Ssolcsc" />
+    <meta name="google-site-verification" content="aCM8j65hUyv5-X_oGKYu0wx-KQMZ--hwcKJOZlMH8SE" />
+   -->
   <meta name="theme-color" content="#000000">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta http-equiv="content-language" content="en-us" />
+  <meta http-equiv="content-script-type" content="text/javascript" />
+  <meta http-equiv="content-style-type" content="text/css" />
   <!--
     manifest.json provides metadata used when your web app is added to the
     homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
