--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="author" content="creative.market" />
   <meta name="robots" content="index,follow" />
 
-  <meta name="keywords" content="Creative Market Rent Gear Share Gear" />
+  <meta name="keywords" content="Creative Market Rent Gear Share rent gear share gear renting" />
   <meta name="description" content="Rent creative gear from the people around you. Rent and share gear with Creative Market." />
   <meta property="og:title" content="creative.market: Rent creative gear from the people around you. Rent and share gear with creative market." />
   <meta property="og:description" content="With Creative Market, you can rent any gear you might need from other creatives around you. Allow others to rent from you at the same time." />
@@ -40,15 +40,8 @@
         crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<!--
-    Notice the use of %PUBLIC_URL% in the tags above.
-    It will be replaced with the URL of the `public` folder during the build.
-    Only files inside the `public` folder can be referenced from the HTML.
+  <link rel="canonical" href="https://creative.market/rent-gear?type=all" data-react-helmet="true">
 
-    Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-    work correctly both with client-side routing and a non-root public URL.
-    Learn how to configure a non-root public URL by running `npm run build`.
-  -->
   <title>Creative Market</title>
 </head>
 <body>
