SEO & social for gear detail

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
   <meta name="author" content="creative.market" />
   <meta name="robots" content="index,follow" />
 
-  <meta name="keywords" content="Creative Market Rent Gear Share rent gear share gear renting" />
-  <meta name="description" content="Rent creative gear from the people around you. Rent and share gear with Creative Market." />
-  <meta property="og:title" content="creative.market: Rent creative gear from the people around you. Rent and share gear with creative market." />
-  <meta property="og:description" content="With Creative Market, you can rent any gear you might need from other creatives around you. Allow others to rent from you at the same time." />
+  <meta name="keywords" content="Creative,Market,Rent,Gear,Share,rent,rental,gear,gadget,share,gear,renting,best,reliable" />
+  <meta name="description" content="Rent creative gear from the people around you. With Creative Market, you can now rent any gear you might need from other creatives around you. The best and reliable gear renting online site. A secure rental community for creators, by creators." />
+  <meta property="og:title" content="creative.market: Rent creative gear from the people around you. The best and reliable gear renting online site. A secure rental community for creators, by creators." />
+  <meta property="og:description" content="With Creative Market, you can rent any gear you might need from other creatives around you. Allow others to rent gear from you at the same time." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://creative.market/images/logo-small.svg" />
   <meta property="og:locale" content="en-us" />
@@ -19,28 +19,21 @@
   <meta name="twitter:site" content="@creativemarket">
   <meta name="twitter:creator" content="@creativemarket">
 
-  <!--   <meta name="google-site-verification" content="7YOhhtoNEfX9uqsFOW8FI-h6Nq5GsJ5tnSe3Ssolcsc" />
-    <meta name="google-site-verification" content="aCM8j65hUyv5-X_oGKYu0wx-KQMZ--hwcKJOZlMH8SE" />
-   -->
-  <meta name="theme-color" content="#000000">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <meta name="theme-color" content="#000000">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta http-equiv="content-language" content="en-us" />
   <meta http-equiv="content-script-type" content="text/javascript" />
   <meta http-equiv="content-style-type" content="text/css" />
-  <!--
-    manifest.json provides metadata used when your web app is added to the
-    homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
-  -->
+  <link rel="canonical" href="https://creative.market/rent-gear?type=all" data-react-helmet="true">
+
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="stylesheet" href="/fonts/GothamPro2/stylesheet.css" media="screen" title="no title">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
         integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
         crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-  <link rel="canonical" href="https://creative.market/rent-gear?type=all" data-react-helmet="true">
 
   <title>Creative Market</title>
 </head>
@@ -52,16 +45,6 @@
 <div id="root">
 
 </div>
-<!--
-  This HTML file is a template.
-  If you open it directly in the browser, you will see an empty page.
-
-  You can add webfonts, meta tags, or analytics to this file.
-  The build step will place the bundled scripts into the <body> tag.
-
-  To begin the development, run `npm start` or `yarn start`.
-  To create a production bundle, use `npm run build` or `yarn build`.
--->
 </body>
 </html>
 
