commission & code refactoring

--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,24 @@
   <meta name="author" content="creative.market" />
   <meta name="robots" content="index,follow" />
 
+  <title>Creative Market</title>
+  <meta name="title" content="Creative Market">
+  <meta name="description" content="Rent creative gear from the people around you: cameras, lights, drones, and everything in between.">
   <meta name="keywords" content="Creative,Market,Rent,Gear,Share,rent,rental,gear,gadget,share,gear,renting,best,reliable" />
-  <meta name="description" content="Rent creative gear from the people around you. With Creative Market, you can now rent any gear you might need from other creatives around you. The best and reliable gear renting online site. A secure rental community for creators, by creators." />
-  <meta property="og:title" content="creative.market: Rent creative gear from the people around you. The best and reliable gear renting online site. A secure rental community for creators, by creators." />
-  <meta property="og:description" content="With Creative Market, you can rent any gear you might need from other creatives around you. Allow others to rent gear from you at the same time." />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://creative.market/images/logo-small.svg" />
-  <meta property="og:locale" content="en-us" />
-  <meta property="og:url" content="https://creative.market" />
-  <meta property="og:site_name" content="creative.market" />
 
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="@creativemarket">
-  <meta name="twitter:creator" content="@creativemarket">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.creative.market/">
+  <meta property="og:title" content="Creative Market">
+  <meta property="og:description" content="Rent creative gear from the people around you: cameras, lights, drones, and everything in between.">
+  <meta property="og:image" content="https://www.creative.market/images/social-logo.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://www.creative.market/">
+  <meta property="twitter:title" content="Creative Market">
+  <meta property="twitter:description" content="Rent creative gear from the people around you: cameras, lights, drones, and everything in between.">
+  <meta property="twitter:image" content="https://www.creative.market/images/social-logo.png">
 
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
