--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
   <meta property="og:title" content="Creative Market">
   <meta property="og:description" content="Rent creative gear from the people around you: cameras, lights, drones, and everything in between.">
   <meta property="og:image" content="https://www.creative.market/images/social-logo.png">
+  <meta property="fb:page_id" content="395450240451647" />
+
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
