add google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,6 @@
   <meta property="og:image" content="https://www.creative.market/images/social-logo.png">
   <meta property="fb:page_id" content="395450240451647" />
 
-
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://www.creative.market/">
@@ -44,8 +43,15 @@
 
   <title>Creative Market</title>
 </head>
-<body>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBthbaEZovvYQGASfFyLwekEGHEMQ-Ure0&libraries=places"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'GA_MEASUREMENT_ID');
+</script>
+<body>
 <div id="root">
 
 </div>
