social meta tag update

--- a/public/index.html
+++ b/public/index.html
@@ -12,18 +12,19 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
+  <meta property="og:site_name " content="Creative Market" />
   <meta property="og:url" content="https://www.creative.market/">
   <meta property="og:title" content="Creative Market">
   <meta property="og:description" content="Rent creative gear from the people around you: cameras, lights, drones, and everything in between.">
   <meta property="og:image" content="https://www.creative.market/images/social-logo.png">
-  <meta property="fb:app_id" content="395450240451647" />
+  <meta property="fb:app_id" content="2395776844038667" />
 
   <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://www.creative.market/">
-  <meta property="twitter:title" content="Creative Market">
-  <meta property="twitter:description" content="Rent creative gear from the people around you: cameras, lights, drones, and everything in between.">
-  <meta property="twitter:image" content="https://www.creative.market/images/social-logo.png">
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://www.creative.market/" />
+  <meta name="twitter:title" content="Creative Market" />
+  <meta name="twitter:description" content="Rent creative gear from the people around you: cameras, lights, drones, and everything in between." />
+  <meta name="twitter:image" content="https://www.creative.market/images/social-logo.png" />
 
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -32,7 +33,6 @@
   <meta http-equiv="content-language" content="en-us" />
   <meta http-equiv="content-script-type" content="text/javascript" />
   <meta http-equiv="content-style-type" content="text/css" />
-  <link rel="canonical" href="https://creative.market/rent-gear?type=all" data-react-helmet="true">
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="stylesheet" href="/fonts/GothamPro2/stylesheet.css" media="screen" title="no title">
