Pay-In process update using MangoPay

--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,7 @@
   gtag('js', new Date());
   gtag('config', 'GA_MEASUREMENT_ID');
 </script>
+<script type="text/javascript" src="js/mangopay-kit.js"></script>
 <body>
 <div id="root">
 
